# mtcp

./: .buildtest.sh  .buildtest_dpdk.sh  .buildtest_netmap.sh  .buildtest_psio.sh  .check_hyperthreading.sh  .gitignore  .gitmodules  .travis.yml  CHANGELOG  LICENSE  Makefile.am  Makefile.in  README  README-libos  README.arm-odp  README.config  README.devel  README.local  README.md  README.md.old  README.netmap  README.spdk  TODOS  aclocal.m4  config.h.in  configure  configure.ac  export_dpdk_linker_flags.sh  index.html  mtcp_crossbuild.sh  no_hyperthread.sh  params.json  setup_dpdk_env.sh  setup_linux_env.sh  setup_mtcp_dpdk_env.sh  setup_mtcp_env.sh  setup_mtcp_onvm_env.sh
odp-1.7/: .checkpatch.conf  .gitignore  .gitreview  CHANGELOG  CONTRIBUTING  DEPENDENCIES  LICENSE  Makefile.am  README  aminclude.am  bootstrap  configure.ac
odp-1.7/config/: README
odp-1.7/doc/: Makefile.am  Makefile.inc  doxygenlayout.xml  glossary.adoc  odpdoxygen.css
odp-1.7/doc/application-api-guide/: Makefile.am  api_guide_lines.dox  doxygen.cfg  examples.dox  odp.dox  release.dox
odp-1.7/doc/images/: .gitignore  Makefile.am  resource_management.msc
odp-1.7/doc/implementers-guide/: Makefile.am  implementers-guide.adoc
odp-1.7/doc/process-guide/: Makefile.am  bylaws-guide.adoc  release-guide.adoc
odp-1.7/doc/users-guide/: Makefile.am  users-guide.adoc
odp-1.7/example/: Makefile.am  Makefile.inc  README  example_debug.h
odp-1.7/example/classifier/: .gitignore  Makefile.am  odp_classifier.c
odp-1.7/example/classifier_direct/: Makefile.am  odp_classifier_direct.c
odp-1.7/example/generator/: .gitignore  Makefile.am  odp_generator.c
odp-1.7/example/ipsec/: .gitignore  Makefile.am  README  odp_ipsec.c  odp_ipsec_cache.c  odp_ipsec_cache.h  odp_ipsec_fwd_db.c  odp_ipsec_fwd_db.h  odp_ipsec_loop_db.c  odp_ipsec_loop_db.h  odp_ipsec_misc.h  odp_ipsec_sa_db.c  odp_ipsec_sa_db.h  odp_ipsec_sp_db.c  odp_ipsec_sp_db.h  odp_ipsec_stream.c  odp_ipsec_stream.h  run_ah_in  run_ah_out  run_both_in  run_both_out  run_esp_in  run_esp_out  run_live  run_router  run_simple
odp-1.7/example/l2fwd/: Makefile.am  odp_l2fwd.c
odp-1.7/example/l2fwd_rss/: Makefile.am  odp_l2fwd_rss.c
odp-1.7/example/packet/: .gitignore  Makefile.am  odp_pktio.c
odp-1.7/example/time/: .gitignore  Makefile.am  time_global_test.c
odp-1.7/example/timer/: .gitignore  Makefile.am  odp_timer_test.c
odp-1.7/helper/: .gitignore  Makefile.am  hashtable.c  lineartable.c  linux.c  odph_debug.h  odph_hashtable.h  odph_lineartable.h  odph_list_internal.h  ring.c
odp-1.7/helper/test/: .gitignore  Makefile.am  odp_chksum.c  odp_process.c  odp_table.c  odp_thread.c
odp-1.7/include/: odp.h
odp-1.7/include/odp/api/: align.h  atomic.h  barrier.h  buffer.h  byteorder.h  classification.h  compiler.h  config.h  cpu.h  cpumask.h  crypto.h  debug.h  errno.h  event.h  hash.h  hints.h  init.h  packet.h  packet_flags.h  packet_io.h  packet_io_stats.h  pool.h  queue.h  random.h  rwlock.h  rwlock_recursive.h  schedule.h  schedule_types.h  shared_memory.h  spinlock.h  spinlock_recursive.h  std_clib.h  std_types.h  sync.h  system_info.h  thread.h  thrmask.h  ticketlock.h  time.h  timer.h  (+1 more)
odp-1.7/kernelfiles/: hip05-d02.dtb  pv660_hns.ko
odp-1.7/pkg/debian/: README.Debian  changelog  control  copyright  rules
odp-1.7/pkg/rpm/: odp.spec
odp-1.7/pkgconfig/: libodp.pc.in  libodphelper.pc.in
odp-1.7/platform/: Makefile.inc
odp-1.7/platform/linux-generic/: Makefile.am  Makefile.inc  Makefile_odp  README  odp_atomic.c  odp_barrier.c  odp_buffer.c  odp_classification.c  odp_cpu.c  odp_cpumask.c  odp_cpumask_task.c  odp_crypto.c  odp_errno.c  odp_event.c  odp_hash.c  odp_impl.c  odp_init.c  odp_packet.c  odp_packet_flags.c  odp_packet_io.c  odp_pool.c  odp_queue.c  odp_rwlock.c  odp_rwlock_recursive.c  odp_schedule.c  odp_shared_memory.c  odp_spinlock.c  odp_spinlock_recursive.c  odp_system_info.c  odp_thread.c  odp_thrmask.c  odp_ticketlock.c  odp_time.c  odp_timer.c  odp_version.c  odp_weak.c
odp-1.7/platform/linux-generic/include/: odp_align_internal.h  odp_atomic_internal.h  odp_buffer_inlines.h  odp_buffer_internal.h  odp_classification_datamodel.h  odp_classification_inlines.h  odp_classification_internal.h  odp_crypto_internal.h  odp_debug_internal.h  odp_forward_typedefs_internal.h  odp_internal.h  odp_packet_internal.h  odp_packet_io_internal.h  odp_packet_io_queue.h  odp_packet_netmap.h  odp_packet_socket.h  odp_packet_tap.h  odp_pool_internal.h  odp_posix_extensions.h  odp_queue_internal.h  odp_schedule_internal.h  odp_timer_internal.h
odp-1.7/platform/linux-generic/m4/: configure.m4  odp_netmap.m4  odp_openssl.m4  odp_pcap.m4  odp_pthread.m4
odp-1.7/platform/linux-generic/pktio/: ethtool.c  hns_net.c  io_ops.c  loop.c  netmap.c  pcap.c  pktio_common.c  socket.c  socket_mmap.c  sysfs.c  tap.c
odp-1.7/platform/linux-generic/test/: .gitignore  Makefile.am  run-test
odp-1.7/platform/linux-hisilicon/: README
odp-1.7/platform/linux-hisilicon/common/: odp_common.c  odp_common_dev.c  odp_common_devargs.c  odp_core.c  odp_options.h  odp_tailqs.c
odp-1.7/platform/linux-hisilicon/cpudrv/: odp_swab.c
odp-1.7/platform/linux-hisilicon/ether/: odp_ethdev.c
odp-1.7/platform/linux-hisilicon/include/: odp_base.h  odp_common.h  odp_config.h  odp_core.h  odp_cpuflags.h  odp_cycles.h  odp_dev.h  odp_devargs.h  odp_eth_ctrl.h  odp_ethdev.h  odp_ether.h  odp_filesystem.h  odp_hisi.h  odp_hisi_atomic.h  odp_hisi_crypto_internal.h  odp_hugepage.h  odp_kni.h  (+14 more)
odp-1.7/scripts/: Makefile.am  builddeb  buildrpm  checkpatch.pl  cleanfile  common_pkg_build.sh  get_impl_str.sh  git_hash.sh  odp_check
odp-1.7/test/: Makefile.am  Makefile.inc  README  test_debug.h
odp-1.7/test/api_test/: .gitignore  Makefile.am  odp_common.c  odp_common.h  odp_ring_test.c
odp-1.7/test/miscellaneous/: .gitignore  Makefile.am  odp_api_from_cpp.cpp
odp-1.7/test/performance/: .gitignore  Makefile.am  odp_atomic.c  odp_l2fwd.c  odp_l2fwd_run  odp_pktio_perf.c  odp_scheduling.c  odp_scheduling_run
odp-1.7/test/validation/: Makefile.am  Makefile.inc  README
(+915 files in other folders)
